# MarketDataPipeline

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: model_training.ipynb  scaling_analysis.ipynb
src/: __init__.py  config.py  main.py
src/data/: ingestion.py  storage.py
src/features/: __init__.py  engineering.py  targets.py
src/ml/: __init__.py  evaluation.py  prediction.py  training.py
